# ext-contract-bug

./: Cargo.toml  README.md  build.sh  deploy.sh
res/: no_std_test.wasm
src/: lib.rs
tests/: general.rs
